--- a/Prediction_orthopedic_patients.ipynb
+++ b/Prediction_orthopedic_patients.ipynb
@@ -22,6 +22,14 @@
     "colab": {
       "name": "Prediction : orthopedic patients.ipynb",
       "provenance": [],
+      "collapsed_sections": [
+        "MBFOh4gIC74i",
+        "F9F8m2_fC76D",
+        "cz9CvLWRC76V",
+        "n16mqgV5C76g",
+        "sn7IshSpC76o",
+        "UfiRCq0eC76p"
+      ],
       "include_colab_link": true
     }
   },
@@ -47,6 +55,10 @@
       },
       "source": [
         "# Prediction : orthopedic patients\n",
+        "\n",
+        "\n",
+        "## Source file folder  \n",
+        "https://drive.google.com/drive/folders/1CyiUs1Q0ioEExS2fLfHI9HdtETPk4DMo?usp=sharing\n",
         "\n",
         "## Introduction \n",
         "\n",
@@ -1424,18 +1436,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Ds-6DEOpC76U",
-        "colab_type": "text"
-      },
-      "source": [
-        "#### Observation \n",
-        "\n",
-        "So we found that the combination for best accuracy is about 81.0% with bootstrap=False,cruterion=gini,max_depth=7,max_leaf_nodes=None and n_estimator=500"
       ]
     },
     {
